@@ -81,5 +81,13 @@ CONTRACT_TYPE
             minCount = 0
             maxCount = 0
         }
+
+        PARAMETER
+        {
+            name = HasPartModule1
+            type = HasPartModule
+
+            partModule = ModuleReactionWheel
+        }
     }
 }
