@@ -3,6 +3,7 @@ ContractConfigurator (UNRELEASED)
 - Created new versions of all the stock parameters dealing with Vessels to add support for tracking non-active vessels.
 - Added HasCrew parameter.
 - Added HasPart parameter.
+- Added HasPartModule parameter.
 - Added VesselHasVisited parameter.
 - Added ReturnHome parameter.
 
